# data_engineering_nyc_taxi_data

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  flow.yml  flow_gcp_scheduled.yml  flow_scheduled.yml  gcp_kv.yml  pyproject.toml  requirements.txt
homework/: module_1.md  module_one_sql.md  module_two.md
markdown_files/: module_2.md  module_3.md
module_1/: docker-compose.yaml  pyproject.toml
src/: etl_pipeline.py  one_time_load.py  utils.py
src_1_docker/: utils.py
src_2_kestra/: flow.yml  flow_gcp_scheduled.yml
src_5_bruin/: README.md
src_5_bruin/pipeline/: pipeline.yml
src_5_bruin/pipeline/assets/ingestion/: taxi_zone_lookup.asset.yml
src_5_bruin/pipeline/assets/reports/: trips.sql
src_5_bruin/pipeline/assets/staging/: staging_trips.sql
src_kestra_flows/: etl_pipeline.py  flow.yaml  one_time_load.py  utils.py
src_module_1/: etl_pipeline.py  one_time_load.py
src_module_2/: flow_scheduled.yml
src_module_3/: bigquery_load.py
